--- a/plugins/RegMatch/css/standalone.css
+++ b/plugins/RegMatch/css/standalone.css
@@ -56,7 +56,7 @@ section.help {
 	display: inline-block;
 	max-width: 10em;
 	padding: .3em;
-	margin: 2em .3em .3em;
+	margin: 1em .3em .3em;
 	text-align: left;
 	font-size: 90%;
 	line-height: 2;
@@ -110,10 +110,10 @@ section.help {
 
 @media (max-width: 1200px) {
 	aside {
-		flex-flow: column;
+		/* flex-flow: column; */
 	}
 
 	#cheatsheet {
-		margin-top: 3em;
+		/* margin-top: 3em; */
 	}
 }
